--- a/src/style.css
+++ b/src/style.css
@@ -119,7 +119,7 @@ nav ul li a:hover {
 footer {
     bottom: 0;
     padding-top: 2%;
-    background-color: rgb(31, 29, 29);
+    background-color: #f3b83a;
     display: flex;
     flex-direction: row;
     justify-content: center;
